<resources>
    <string name="desc1">Aplikasi ini dapat membantu Anda menemukan rumah sakit di Indonesia, tanpa harus mendatanginya secara langsung</string>
    <string name="desc2">Anda juga dapat memantau perkembangan Covid-19 di Indonesia</string>
    <string name="desc3">Terdapat artikel kesehatan terkini dan terpercaya, dari media ternama di Indonesia</string>
    <string name="desc4">Kini Anda bisa mengetahui apakah tubuh Anda ideal atau tidak</string>
    <string name="title1">Rumah Sakit</string>
    <string name="title2">Data Covid-19</string>
    <string name="title3">Artikel Kesehatan</string>
    <string name="title4">Kalkulator BMI</string>
    <string name="bmi">BMI</string>
    <string name="greet">Halo,</string>
    <string name="covid_indonesia">Covid-19 Di Indonesia</string>
    <string name="positive">POSITIF</string>
    <string name="negative">SEMBUH</string>
    <string name="die">MENINGGAL</string>
    <string name="wish">Apa yang Anda butuhkan? semoga sehat selalu ya…</string>
    <string name="choose_prov">Pilih Provinsi</string>
    <string name="choose_city">Pilih Daerah</string>
    <string name="choose_hospital">Pilih Rumah Sakit</string>
    <string name="separated">:</string>
    <string name="bed_total">Total Kasur</string>
    <string name="bed_empty">Kasur\nTersedia</string>
    <string name="covid">Covid</string>
    <string name="non_covid">Non-Covid</string>
    <string name="khusus">Ruang Khusus</string>
    <string name="umum">Ruang Umum</string>
    <string name="bed_class">Tipe Kamar</string>
    <string name="empty">Maaf, tidak ada data yang ditemukan</string>
    <string name="api_key">AIzaSyBrIZ8NJV3ga7TEv3paRnX2pknF56FXtsA</string>
    <string name="article">Artikel Kesehatan</string>
    <string name="next">Selanjutnya</string>
    <string name="back">Sebelumnya</string>
    <string name="out">Kembali</string>
    <string name="finish">Selesai</string>
    <string name="available_room">Kapasitas Tersedia</string>
    <string name="telephone">Telepon</string>
    <string name="direction">Rute</string>
    <string name="share">Bagikan</string>
    <string name="no_internet">Maaf sepertinya ada masalah… Coba tarik ke bawah untuk memuat ulang</string>
    <string name="no_internet_search_news">Maaf sepertinya ada masalah internet… Coba ketik kembali artikelnya</string>
    <string name="input_data">Masukkan data Anda :</string>
    <string name="kg">Berat(kg)</string>
    <string name="cm">Tinggi(cm)</string>
    <string name="calculate">Hitung</string>
    <string name="search_prov">Cari provinsi agar lebih cepat</string>
    <string name="choose">Silahkan pilih fitur yang Anda butuhkan</string>
    <string name="data_covid">Perkembangan Covid</string>
    <string name="calculator_bmi">Kalkulator BMI</string>
    <string name="app_sort_name">SELAMATKAN!</string>
    <string name="other">Lainnya</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="support"><![CDATA[Kontak & Masukkan]]></string>
    <string name="about_desc">Projek ini merupakan tugas akhir sekaligus salah satu syarat kelulusan pengembang Luthfi Daffa Prabowo (201810225212) di Universitas Bhayangkara Jakarta Raya.\n\n Seluruh kode yang pengembang buat dapat diakses <a href="https://github.com/dapoi/SELAMATKAN">di sini</a>.\n\n Terima kasih untuk semua yang telah membantu dalam mengembangkan aplikasi ini. Semoga aplikasi ini bermanfaat untuk kita semua. :)</string>
    <string name="other_info">Info Lainnya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="find_article">Silakan cari artikel yang anda inginkan</string>
</resources>