<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.core.BMIActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculator_bmi"
                android:textColor="@color/dark_gray"
                android:textSize="18sp"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/img_bmi"
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_bmi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/encodesans_semibold"
            android:gravity="start"
            android:text="@string/input_data"
            android:textColor="#FD7A4C"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_bmi" />

        <ImageView
            android:id="@+id/img_scale"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_scale"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_input"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/light_blue"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#FD7A4C"
            app:layout_constraintBottom_toBottomOf="@+id/tv_kg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_kg"
            app:layout_constraintTop_toTopOf="@+id/tv_kg"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_kg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/encodesans_medium"
            android:gravity="start"
            android:text="@string/kg"
            android:textColor="#FD7A4C"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_scale"
            app:layout_constraintStart_toEndOf="@+id/img_scale"
            app:layout_constraintTop_toTopOf="@+id/img_scale" />

        <ImageView
            android:id="@+id/img_height"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/img_height"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_scale"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/light_blue"
            android:inputType="numberDecimal"
            android:maxLength="5"
            android:textColor="#FD7A4C"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_weight"
            app:layout_constraintTop_toTopOf="@+id/tv_cm"
            tools:ignore="Autofill,LabelFor,RtlSymmetry" />

        <TextView
            android:id="@+id/tv_cm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/encodesans_medium"
            android:gravity="start"
            android:text="@string/cm"
            android:textColor="#FD7A4C"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/img_height"
            app:layout_constraintStart_toEndOf="@+id/img_height"
            app:layout_constraintTop_toTopOf="@+id/img_height" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_calculate"
            android:layout_width="110dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="#FD7A4C"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="@+id/et_height"
            app:layout_constraintStart_toStartOf="@+id/img_height"
            app:layout_constraintTop_toBottomOf="@+id/et_height">

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/white"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/encodesans_bold"
                android:text="@string/calculate"
                android:textAllCaps="true"
                android:textColor="@color/white" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>