<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv_hospital"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_hospital_detail"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_bed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_bed_title" />

        <TextView
            android:id="@+id/tv_detail_bed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/encodesans_medium"
            android:text="@string/bed_class"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/img_hospital_detail"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_separated1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/encodesans_regular"
            android:text="@string/separated"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_bed_title"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_bed_title"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_bed_title"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tv_detail_bed_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/encodesans_regular"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_separated1"
            app:layout_constraintTop_toTopOf="@+id/tv_separated1"
            tools:text="Kamar tulip" />

        <TextView
            android:id="@+id/tv_detail_total_bed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/encodesans_medium"
            android:text="@string/bed_total"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_bed_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_bed_name" />

        <TextView
            android:id="@+id/tv_separated2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/encodesans_regular"
            android:text="@string/separated"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_total_bed_title"
            app:layout_constraintEnd_toEndOf="@+id/tv_separated1"
            app:layout_constraintStart_toStartOf="@+id/tv_separated1"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_total_bed_title" />

        <TextView
            android:id="@+id/tv_detail_total_bed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/encodesans_regular"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_bed_name"
            app:layout_constraintStart_toEndOf="@+id/tv_separated2"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_total_bed_title"
            tools:text="100" />

        <TextView
            android:id="@+id/tv_detail_available_bed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/encodesans_medium"
            android:text="@string/bed_empty"
            android:textColor="@color/dark_gray"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_total_bed_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_total_bed" />

        <TextView
            android:id="@+id/tv_separated3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/encodesans_regular"
            android:text="@string/separated"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_available_bed_title"
            app:layout_constraintEnd_toEndOf="@+id/tv_separated2"
            app:layout_constraintStart_toStartOf="@+id/tv_separated2" />

        <TextView
            android:id="@+id/tv_detail_available_bed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/encodesans_regular"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_separated3"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_total_bed"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_total_bed"
            tools:text="80" />

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/encodesans_regular"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_available_bed"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_available_bed"
            tools:text="10 menit lalu" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>