<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.main.FindFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_greet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient"
        android:paddingVertical="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_icon"
            android:layout_width="269dp"
            android:layout_height="158dp"
            android:layout_marginEnd="-95dp"
            android:scaleX="-1"
            android:src="@drawable/img_covid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/tv_hi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:fontFamily="@font/droid_sans"
            android:text="@string/greet"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/droid_sans"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_hi"
            app:layout_constraintStart_toEndOf="@+id/tv_hi"
            app:layout_constraintTop_toTopOf="@+id/tv_hi"
            tools:text="Selamat pagi" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/encodesans_bold"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:maxLines="2"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@+id/img_icon"
            app:layout_constraintStart_toStartOf="@+id/tv_hi"
            app:layout_constraintTop_toBottomOf="@+id/tv_hi"
            tools:text="Daffa" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_title_covid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/dark_gray"
        android:fontFamily="@font/encodesans_medium"
        android:text="@string/covid"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_greet" />

    <TextView
        android:id="@+id/tv_view_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:fontFamily="@font/encodesans_regular"
        android:text="@string/view_all"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_covid"
        app:layout_constraintEnd_toEndOf="@+id/card_covid"
        app:layout_constraintTop_toTopOf="@+id/tv_title_covid" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_covid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_title_covid"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_covid">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_covid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/img_positive"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/ic_positive"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_positive"
                app:layout_constraintStart_toStartOf="@+id/img_positive"
                app:layout_constraintTop_toBottomOf="@+id/img_positive"
                tools:text="10000000" />

            <TextView
                android:id="@+id/tv_positive_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/droid_sans"
                android:text="@string/positive"
                android:textColor="@color/orange"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@id/tv_positive"
                app:layout_constraintStart_toStartOf="@id/tv_positive"
                app:layout_constraintTop_toBottomOf="@id/tv_positive" />

            <ImageView
                android:id="@+id/img_negative"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_negative"
                app:layout_constraintEnd_toStartOf="@+id/img_death"
                app:layout_constraintStart_toEndOf="@+id/img_positive"
                app:layout_constraintTop_toTopOf="@+id/img_positive" />

            <TextView
                android:id="@+id/tv_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_negative"
                app:layout_constraintStart_toStartOf="@+id/img_negative"
                app:layout_constraintTop_toBottomOf="@+id/img_negative"
                tools:text="122929929" />

            <TextView
                android:id="@+id/tv_negative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/droid_sans"
                android:text="@string/negative"
                android:textColor="@color/green"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_negative"
                app:layout_constraintStart_toStartOf="@+id/tv_negative"
                app:layout_constraintTop_toBottomOf="@+id/tv_negative" />

            <ImageView
                android:id="@+id/img_death"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="32dp"
                android:src="@drawable/ic_death"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/img_negative" />

            <TextView
                android:id="@+id/tv_death"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/droid_sans"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/img_death"
                app:layout_constraintStart_toStartOf="@+id/img_death"
                app:layout_constraintTop_toBottomOf="@+id/img_death"
                tools:text="12121212" />

            <TextView
                android:id="@+id/tv_death_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/droid_sans"
                android:text="@string/die"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/tv_death"
                app:layout_constraintStart_toStartOf="@+id/tv_death"
                app:layout_constraintTop_toBottomOf="@+id/tv_death" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>